--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>Contact Me</title>
 </head>
 
-<body>
+<body style="background-color: #EAF6F6;">
     <h1>My Contact Details</h1>
     <p>Samakhusi, Kathmandu, Nepal</p>
     <p>+9779801199134</p>
