--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Susan Shrestha - Personal Website</title>
+
+  <style>
+    body {
+      background-color: #EAF6F6;
+    }
+    hr {
+      border-color: lightgrey;
+      border-width: 4px;
+      border-style: dotted none none;
+      width: 5%;
+      
+      
+    }
+    img {
+      height: 200px;
+      width: 200px;
+    }
+  </style>
 </head>
 
 <body>
