--- a/index.html
+++ b/index.html
@@ -1,92 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="css/styles.css">
-  <title>Susan Shrestha - Personal Website</title>
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Susan Shrestha - Portfolio</title>
 </head>
-
 <body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="images/susan-cropped.png" alt="Susan Shrestha's Photo" /></td>
-      <td>
-        <h1>Susan Shrestha</h1>
-        <p>
-          Co-founder of
-          <em><strong><a href="https://www.nepacoplumbing.com.np">Nepaco</a></strong></em>
-          and <strong><em>Nomnom Kimchi</em></strong>
-        </p>
-        <p>
-          Currently working at WorldLink Communications. I am aspiring Web
-          Developer, graphic designer and video editor. I ♥ to play games, make
-          music whenever I'm free.
-        </p>
-      </td>
-    </tr>
-  </table>
-
-
-  <hr />
-  <h3>Work Experience</h3>
-  <table>
-    <thead>
-      <tr>
-        <th>Year</th>
-        <th>Work</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>2012-2013</td>
-        <td>Data Entry at Cloudfactory</td>
-      </tr>
-      <tr>
-        <td>2014-Now</td>
-        <td>Customer Service at WorldLink</td>
-      </tr>
-    </tbody>
-
-  </table>
-  <hr>
-
-  <a href="hobbies.html">My Hobbies</a>
-  <a href="contact.html">Contact Me </a>
-
-  <h3>Skills</h3>
-
-  <table cellspacing="10px">
-    <tr>
-      <td>HTML</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>CSS</td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>JavaScript</td>
-      <td>⭐</td>
-    </tr>
-    <tr>
-      <td>WordPress</td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Adobe Photoshop & Illustrator</td>
-      <td>⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Vegas Pro</td>
-      <td>⭐⭐⭐</td>
-    </tr>
-  </table>
-
-  <form action="" method="get"></form>
+  
 </body>
-
 </html>
