--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,20 @@
   <link rel="icon" href="favicon.ico">
   <title>Susan Shrestha - Portfolio</title>
 </head>
-<body> <!--Body Starts-->
-  
+
+<body>
+  <!--Body Starts-->
+  <div class="top-container">
+    <h1>I'm Susan.</h1>
+    <p>a Web developer.</p>
+  </div>
+  <div class="middle-container">
+
+  </div>
+  <div class="bottom-container">
+
+  </div>
+
 </body>
+
 </html>
