--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 <body>
   <!--Body Starts-->
   <div class="top-container">
+    <img src="images/cloud.png" alt="cloud-image">
     <h1>I'm Susan.</h1>
     <p>a Web developer.</p>
+    <img src="images/cloud.png" alt="cloud-image">
+    <img src="images/mountain.png" alt="mountain-image">
   </div>
   <div class="middle-container">
 
