--- a/index.html
+++ b/index.html
@@ -1,37 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/styles.css" />
+    <!-- My CSS file here -->
+    <link rel="icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&family=Space+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <title>Susan Shrestha - Portfolio</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css"> <!-- My CSS file here -->
-  <link rel="icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&family=Space+Mono&display=swap"
-    rel="stylesheet">
-  <title>Susan Shrestha - Portfolio</title>
-</head>
+  <body>
+    <!--Body Starts-->
+    <div class="top-container">
+      <img class="top-cloud" src="images/cloud.png" alt="cloud-image" />
+      <h1>I'm Susan.</h1>
+      <p>a Web developer.</p>
+      <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image" />
+      <img src="images/mountain.png" alt="mountain-image" />
+    </div>
 
-<body>
-  <!--Body Starts-->
-  <div class="top-container">
-    <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
-    <h1>I'm Susan.</h1>
-    <p>a Web developer.</p>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
-    <img src="images/mountain.png" alt="mountain-image">
-  </div>
-
-  <div class="middle-container">
-
-  </div>
-  <div class="bottom-container">
-
-  </div>
-
-</body>
-
+    <div class="middle-container"></div>
+    <div class="bottom-container"></div>
+  </body>
 </html>
