Added stubcode and new images

--- a/index.html
+++ b/index.html
@@ -26,7 +26,55 @@
       <img src="images/mountain.png" alt="mountain-image" />
     </div>
 
-    <div class="middle-container"></div>
-    <div class="bottom-container"></div>
+    <div class="middle-container">
+      <div class="profile">
+        <img src="images/susan-cropped.png" alt="susan's photo" />
+        <h2>Hello.</h2>
+        <p>
+          I am an aspiring Web Developer. I'm the founder of
+          <em><a href="https://www.nepacoplumbing.com.np">Nepaco</a></em
+          >. I ❤ to play games and party whenever I'm free.
+        </p>
+      </div>
+      <hr />
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="" src="images/coding.png" alt="coding image" />
+          <h3>Design & Development</h3>
+          <p>
+            I started to learn to make website when I was 14 as a hobby. I have
+            decided to pursue career in designing and developing web based
+            applications.
+          </p>
+        </div>
+        <div class="skill-row">
+          <img class="" src="images/art.png" alt="art icon" />
+          <h3>Arts</h3>
+          <p>
+            I loved doing Arts since an early age. This has led to me to develop a keen eye on designs.
+          </p>
+        </div>
+      </div>
+      <hr />
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
+        <p>
+          Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
+          tellus donec dui, ornare erat.
+        </p>
+        <a class="btn" href="mailto:shr.susan7@gmail.com">CONTACT ME</a>
+      </div>
+    </div>
+
+    <div class="bottom-container">
+      <a class="footer-link" href="https://www.instagram.com/susanshr"
+        >Instagram</a
+      >
+      <a class="footer-link" href="https://twitter.com/shrssn7">Twitter</a>
+      <a class="footer-link" href="https://cnobi.github.io">Website</a>
+      <p>© 2022 Susan Shrestha.</p>
+    </div>
   </body>
 </html>
