Changed the font colors

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-image" />
       <h1>I'm Susan.</h1>
-      <p>a Web developer.</p>
+      <h2>a Web developer.</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image" />
       <img src="images/mountain.png" alt="mountain-image" />
     </div>
