attempting final css challenge

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-image" />
       <h1>I'm Susan.</h1>
-      <h2>a Web developer.</h2>
+      <h2 id="title-sub">a Web developer.</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image" />
       <img src="images/mountain.png" alt="mountain-image" />
     </div>
@@ -30,7 +30,7 @@
       <div class="profile">
         <img src="images/susan-cropped.png" alt="susan's photo" />
         <h2>Hello.</h2>
-        <p>
+        <p class="profile-description">
           I am an aspiring Web Developer. I'm the founder of
           <em><a href="https://www.nepacoplumbing.com.np">Nepaco</a></em
           >. I ❤ to play games and party whenever I'm free.
@@ -40,7 +40,11 @@
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="" src="images/coding.png" alt="coding image" />
+          <img
+            class="coding-image"
+            src="images/coding.png"
+            alt="coding image"
+          />
           <h3>Design & Development</h3>
           <p>
             I started to learn to make website when I was 14 as a hobby. I have
@@ -49,21 +53,19 @@
           </p>
         </div>
         <div class="skill-row">
-          <img class="" src="images/art.png" alt="art icon" />
+          <img class="art-image" src="images/art.png" alt="art icon" />
           <h3>Arts</h3>
           <p>
-            I loved doing Arts since an early age. This has led to me to develop a keen eye on designs.
+            I loved doing Arts since an early age. This has led to me to develop
+            a keen eye on designs.
           </p>
         </div>
       </div>
       <hr />
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p>
-          Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales,
-          tellus donec dui, ornare erat.
-        </p>
+        <h3>For your designing needs.</h3>
+        <p>Or maybe we can play some good games together while we discuss your projects!</p>
         <a class="btn" href="mailto:shr.susan7@gmail.com">CONTACT ME</a>
       </div>
     </div>
