attempting final css challenge #2

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       >
       <a class="footer-link" href="https://twitter.com/shrssn7">Twitter</a>
       <a class="footer-link" href="https://cnobi.github.io">Website</a>
-      <p>© 2022 Susan Shrestha.</p>
+      <p class="copyright">©2022 Susan Shrestha.</p>
     </div>
   </body>
 </html>
