CSS Challenge completed

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3>For your designing needs.</h3>
-        <p>Or maybe we can play some good games together while we discuss your projects!</p>
+        <p class="contact-msg">Or maybe we can play some good games together while we discuss your projects!</p>
         <a class="btn" href="mailto:shr.susan7@gmail.com">CONTACT ME</a>
       </div>
     </div>
