--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&family=Space+Mono&display=swap"
       rel="stylesheet"
     />
-    <title>Susan Shrestha - Portfolio</title>
+    <title>Susan Shrestha</title>
   </head>
 
   <body>
@@ -33,7 +33,7 @@
         <p class="profile-description">
           I am an aspiring Web Developer. I'm the founder of
           <em><a href="https://www.nepacoplumbing.com.np">Nepaco</a></em
-          >. I ❤ to play games and party whenever I'm free.
+          >. I ❤ to play games, guitar and read whenever I have time.
         </p>
       </div>
       <hr />
@@ -49,7 +49,7 @@
           <p>
             I started to learn to make website when I was 14 as a hobby. I have
             decided to pursue career in designing and developing web based
-            applications.
+            applications very recently.
           </p>
         </div>
         <div class="skill-row">
@@ -75,7 +75,7 @@
         >Instagram</a
       >
       <a class="footer-link" href="https://twitter.com/shrssn7">Twitter</a>
-      <a class="footer-link" href="https://cnobi.github.io">Website</a>
+      <a class="footer-link" href="https://cnobi.github.io">Github</a>
       <p class="copyright">©2022 Susan Shrestha.</p>
     </div>
   </body>
