--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="top-container">
       <img class="top-cloud" src="images/cloud.png" alt="cloud-image" />
       <h1>I'm Susan.</h1>
-      <h2 id="title-sub">a Web developer.</h2>
+      <h2 id="title-sub">an aspiring developer & designer.</h2>
       <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image" />
       <img src="images/mountain.png" alt="mountain-image" />
     </div>
@@ -31,7 +31,7 @@
         <img src="images/susan-cropped.png" alt="susan's photo" />
         <h2>Hello.</h2>
         <p class="profile-description">
-          I am an aspiring Web Developer. I'm the founder of
+          I am an aspiring Web Developer. I'm the co-founder of
           <em><a href="https://www.nepacoplumbing.com.np">Nepaco</a></em
           >. I ❤ to play games, guitar and read whenever I have time.
         </p>
