--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&family=Space+Mono&display=swap"
       rel="stylesheet"
     />
-    <title>Susan Shrestha</title>
+    <title>Susan Shrestha - An aspiring developer and designer</title>
   </head>
 
   <body>
@@ -32,8 +32,7 @@
         <h2>Hello.</h2>
         <p class="profile-description">
           I am an aspiring Web Developer. I'm the co-founder of
-          <em><a href="https://www.nepacoplumbing.com.np">Nepaco</a></em
-          >. I ❤ to play games, guitar and read whenever I have time.
+          Nepaco Online Plumbing services. I ❤ gaming, playing guitar, reading & learning new things whenever I have the time.
         </p>
       </div>
       <hr />
@@ -47,9 +46,8 @@
           />
           <h3>Design & Development</h3>
           <p>
-            I started to learn to make website when I was 14 as a hobby. I have
-            decided to pursue career in designing and developing web based
-            applications very recently.
+            I started designing simple webpages when I was 14 out of curiosity. It developed as a hobby but only very recently, I have
+            decided to pursue career in designing and development.
           </p>
         </div>
         <div class="skill-row">
@@ -57,7 +55,7 @@
           <h3>Arts</h3>
           <p>
             I loved doing Arts since an early age. This has led to me to develop
-            a keen eye on designs.
+            a keen eye on design. Every details has to be pixel perfect, no compromise!
           </p>
         </div>
       </div>
