--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         <img src="images/susan-cropped.png" alt="susan's photo" />
         <h2>Hello.</h2>
         <p class="profile-description">
-          I am an aspiring Web Developer. I'm the co-founder of
-          Nepaco Online Plumbing services. I ❤ gaming, playing guitar, reading & learning new things whenever I have the time.
+           I'm the co-founder of Nepaco Online Plumbing services. I ❤ gaming, playing guitar, reading & learning new things whenever I have the time.
         </p>
       </div>
       <hr />
@@ -55,7 +54,7 @@
           <h3>Arts</h3>
           <p>
             I loved doing Arts since an early age. This has led to me to develop
-            a keen eye on design. Every details has to be pixel perfect, no compromise!
+            a keen eye on design and details. Everything has to be pixel perfect, no compromise!
           </p>
         </div>
       </div>
@@ -64,7 +63,7 @@
         <h2>Get In Touch</h2>
         <h3>For your designing needs.</h3>
         <p class="contact-msg">Or maybe we can play some good games together while we discuss your projects!</p>
-        <a class="btn" href="mailto:shr.susan7@gmail.com">CONTACT ME</a>
+        <a class="btn" href="mailto:officialsusanshr@gmail.com">CONTACT ME</a>
       </div>
     </div>
 
