update texts and links

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="middle-container">
       <div class="profile">
         <img src="images/susan-cropped.png" alt="susan's photo" />
-        <h2>Hello.</h2>
+        <h2>Hello!</h2>
         <p class="profile-description">
            I'm the co-founder of Nepaco Online Plumbing services. I ❤ gaming, playing guitar, reading & learning new things whenever I have the time.
         </p>
@@ -69,7 +69,7 @@
         >Instagram</a
       >
       <a class="footer-link" href="https://twitter.com/shrssn7">Twitter</a>
-      <a class="footer-link" href="https://cnobi.github.io">Github</a>
+      <a class="footer-link" href="https://github.com/cnobi">Github</a>
       <p class="copyright">©2022 Susan Shrestha.</p>
     </div>
   </body>
