update profile info

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <!--Body Starts-->
     <div class="top-container">
-      <h1>I'm Susan.</h1>
+      <h1>I'm Susan Shrestha.</h1>
       <h2 id="title-sub">an aspiring developer & designer.</h2>
     </div>
 
@@ -28,7 +28,7 @@
         <img src="images/susan-cropped.png" alt="susan's photo" />
         <h2>Hello!</h2>
         <p class="profile-description">
-           I'm the co-founder of Nepaco Online Plumbing services. I ❤ gaming, playing guitar, reading & learning new things whenever I have the time.
+           I'm the co-founder of Nepaco Online Plumbing services. I'm currently working in WorldLink Communications as a L2 Support rep performing various tasks including design and development. I ❤ gaming, playing guitar, reading & learning new things whenever I have the time.
         </p>
       </div>
       <hr />
