--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <!--Body Starts-->
     <div class="top-container">
-      <h1>I'm Susan Shrestha.</h1>
+      <h1>I'm Susan.</h1>
       <h2 id="title-sub">an aspiring developer & designer.</h2>
     </div>
 
